@@ -1,3 +1,6 @@
+105
+- squeezelite: update to e92c09c and support all possible media formats
+
 104
 - squeezelite: update to a3d95ec and link audio libraries
 
